# buckystyle_league_championship_series

./: -  .gitignore  .slugignore  Procfile  README.md  app.yaml  ballchasing_api.py  docker-compose.yml  dockerfile  hello.py  main.py  pyproject.toml  pyproject_backup.toml  requirements.txt  secrets.yaml
.do/: app.yaml
.github/workflows/: data_collection.yml  main.yml  predictions.yml
blcs_rust/: Cargo.toml
blcs_rust/src/: main.rs
buckystyle_league_championship_series.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: config.py
cpp/src/: data.cpp
dashboard/: Dockerfile  _taipy_version_check.py  main.py  pyproject.toml  requirements.txt  show_table_info.py
dashboard/.do/: app.yaml
dashboard/outputs/2025-07-18/12-22-44/.hydra/: hydra.yaml
dashboard/outputs/2025-07-18/12-26-49/.hydra/: hydra.yaml
dashboard/outputs/2025-07-18/12-31-27/.hydra/: config.yaml  hydra.yaml
dashboard/outputs/2025-07-18/12-35-53/.hydra/: hydra.yaml
dashboard/outputs/2025-07-18/12-42-22/.hydra/: hydra.yaml
dashboard/outputs/2025-07-19/08-15-57/.hydra/: hydra.yaml
dashboard/outputs/2025-07-19/09-33-01/.hydra/: config.yaml  hydra.yaml
dashboard/outputs/2025-07-19/09-35-55/.hydra/: config.yaml  hydra.yaml
dashboard/outputs/2025-07-19/09-36-44/.hydra/: hydra.yaml
dashboard/outputs/2025-07-19/09-37-36/.hydra/: config.yaml  hydra.yaml
dashboard/outputs/2025-07-19/09-38-28/.hydra/: config.yaml  hydra.yaml
dashboard/outputs/2025-07-19/09-38-58/.hydra/: config.yaml  hydra.yaml
dashboard/outputs/2025-07-19/09-40-35/.hydra/: hydra.yaml
dashboard/outputs/2025-07-19/09-43-48/.hydra/: hydra.yaml
dashboard/outputs/2025-07-19/09-44-35/.hydra/: hydra.yaml
dashboard/outputs/2025-07-19/09-46-12/.hydra/: hydra.yaml
dashboard/outputs/2025-07-19/09-48-07/.hydra/: hydra.yaml
dashboard/outputs/2025-07-19/09-49-33/.hydra/: hydra.yaml
dashboard/outputs/2025-07-19/09-51-23/.hydra/: hydra.yaml
dashboard/outputs/2025-07-19/10-02-17/.hydra/: hydra.yaml
dashboard/outputs/2025-07-19/10-03-21/.hydra/: hydra.yaml
data/parquet/: blue_df.parquet  final.parquet  orange_df.parquet  playoff_player_data_season_2.parquet  playoff_player_data_season_3.parquet  playoff_team_data_season_2.csv  playoff_team_data_season_2.parquet  playoff_team_data_season_3.parquet  playoff_team_data_season_4.parquet  previous_season_player_data.parquet  previous_season_team_data.parquet  replay_df.parquet  season_2_overall.parquet  season_2_overall_player_data.parquet  season_2_player_stats.parquet  season_2_team_stats.parquet  season_3_all_data.parquet  season_3_player_data.parquet  (+3 more)
data_analysis/: pyproject.toml  requirements.txt
data_analysis/models/: models.py  repositories.py
data_analysis/notebooks/: blcs3.ipynb  example.csv  exploratory_analysis.ipynb  playoffs_eda.ipynb  predictions.ipynb  test.ipynb
data_analysis/scripts/: ballchasing_service.py  playoff_stats.py
data_analysis/scripts/data/parquet/: season_4_team_data.parquet
data_analysis/src/data_analysis/: __init__.py
data_analysis/tests/: test_data_processing.py  test_scheduling.py
data_analysis/visualization/: visualization.py
database/: __init__.py  database.py  get_member_connections.py  init_db.py  schema.sql
discord_bot/: Dockerfile  Procfile  bot.py  create_db.py  diagnose_db.py  migrations.py  monitor_db.py  pyproject.toml  requirements.txt
discord_bot/.do/: app.yaml
discord_bot/cogs/: admin.py  availability.py  ballchasing.py  blcs_stats.py  blcsx_profiles.py  blcsx_stats.py  cleanup_availability.py  commands.py  commands_cog.py  data_updates.py  draft_odds.py  draft_prob.py  enhanced_profiles.py  message_handler.py  player_profiles.py  playoff_management.py  predictions.py  profile_linking.py  schedule.py  schedule_handler.py  scheduling.py  season_management.py  season_summary.py  send_images.py  send_updates.py  series_management.py  statistics.py  team_management.py  team_stats.py
discord_bot/conf/: config.yaml
discord_bot/friends_code/: data_driven_dominance_calculator.py  friends_suggestin.txt
discord_bot/logs/: schemas.txt
discord_bot/models/: database_config.py  draft.py  league.py  player.py  player_profile.py  playoff.py  scheduler.py  scheduling.py  season.py  series.py  team.py
discord_bot/models/sklearn_models/: scaler_fantasy.pkl
discord_bot/models/team_metrics/: metrics_calculator.py
discord_bot/scripts/: process.py
discord_bot/scripts/data/parquet/: season_4_player_data.parquet
discord_bot/services/: ballchasing_service.py  ballchasing_stats_updater.py
discord_bot/src/discord_bot/: __init__.py
discord_bot/utils/: ballchasing_api.py  database.py  visualization.py
golang_src/: fetch_data.go  go.mod
notebooks/: blcs3.ipynb  ex.ipynb  example.csv  exp.ipynb  exploratory_analysis.ipynb  overall.ipynb  playoffs_eda.ipynb  test.ipynb
rust_predictions/: Cargo.toml
rust_predictions/src/: main.rs
scheduling/: __init__.py  database.py  input_availability.py  insert_parquet_data.py  schedule_matches.py  setup_database.py  view_database.py
scripts/: data_collection.py  data_processing.py  fetch_previous_stats.py  generate_reports.py  playoff_stats.py  process.py  season_2.py  streamlit.py  train_fantasy_model.py
shared/: pyproject.toml  requirements.txt
shared/config/: __init__.py  config.py
shared/config/conf/: blcsx_calculator_config.yaml  dashboard_config.yaml  env.yaml  main.yaml
shared/database/: main_functions.py
shared/src/shared_components/: __init__.py
src/: app.py
terraform_files/: main.tf
tests/: test_bot.py  test_data_processing.py  test_database.py
visualization/: visualization.py
(+9 files in other folders)
