[project]
name = "buckystyle-league-championship-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataframe-image>=0.1.5",
    "db-sqlite3>=0.0.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "py-cord>=2.6.1",
    "pyarrow>=18.1.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scipy>=1.14.1",
    "joblib>=1.4.2",
    "plotly>=5.24.1",
    "matplotlib>=3.10.0",
    "selenium>=4.28.1",
    "playwright>=1.49.1",
    "scikit-learn>=1.6.1",
    "apscheduler>=3.11.0",
    "regex>=2024.11.6",
    "loguru>=0.7.3",
    "tqdm>=4.67.1",
    "motor>=3.7.0",
    "aiohttp>=3.11.11",
    "setuptools>=75.8.2",
    "pymongo[srv]>=4.11.1",
    "pillow>=11.1.0",
    "pydantic>=2.11.3",
    "fastapi[standard]>=0.115.12",
    "sqlalchemy>=2.0.41",
    "pexpect==4.9.0",
]
