[package]
name = "rust_predictions"
version = "0.1.0"
edition = "2021"

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
polars = { version = "0.44.2", features = ["lazy", "parquet"] }
polars-core = "0.44.2"
polars-lazy = "0.44.2"
linfa = "0.7.0"
linfa-linear = "0.7.0"
ndarray = "0.16.1"
ndarray-linalg = "0.16.0"
nalgebra = "0.33.2"
csv = "1.3.1"
string_utils = "0.1.4"
serde = { version = "1.0.215", features = ["derive"] }
